--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,9 +15,13 @@
 }
 
 body {
-  color: var(--foreground);
+  color: white;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.about {
+  color: #344c34;
 }
 
 .switch {
@@ -78,4 +82,49 @@ input:checked+.slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 19px;
+  background-color: #b6dbc9;
+  color: #344c34;
+  text-align: center;
+  font-size: 20px;
+  padding: 5px;
+  width: 225px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  border:2px solid #344c34;
+
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 15px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+footer {
+  background-color: #344c34;
 }
