--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -15,13 +16,13 @@
 }
 
 body {
-  color: white;
+  color: #c2bb6d;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .about {
-  color: #344c34;
+  color: #c2bb6d;
 }
 
 .switch {
@@ -86,9 +87,9 @@ input:checked+.slider:before {
 
 .button {
   display: inline-block;
-  border-radius: 19px;
-  background-color: #b6dbc9;
-  color: #344c34;
+  border-radius: 20px;
+  background-color: #ffffff;
+  color: #c2bb6d;
   text-align: center;
   font-size: 20px;
   padding: 5px;
@@ -96,8 +97,7 @@ input:checked+.slider:before {
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
-  border:2px solid #344c34;
-
+  border: 2px solid #c2bb6d;
 }
 
 .button span {
@@ -126,5 +126,19 @@ input:checked+.slider:before {
 }
 
 footer {
-  background-color: #344c34;
+  background-color: #c2bb6d;
+}
+
+iframe {
+  width: 100%;
+  height: 500px;
+  filter: invert(95%) hue-rotate(180deg);
+}
+
+#time {
+  color:#c2bb6d;
+}
+
+#heading {
+  color: #c2bb6d
 }
